[gd_scene load_steps=3 format=3 uid="uid://oplmi08p0i75"]

[ext_resource type="Script" path="res://scripts/formation.gd" id="1_y3gnk"]
[ext_resource type="Script" path="res://scripts/movement.gd" id="2_cin21"]

[node name="Formation" type="Node2D"]
script = ExtResource("1_y3gnk")

[node name="Movement" type="Node2D" parent="."]
script = ExtResource("2_cin21")

[node name="MoveTimerForward" type="Timer" parent="Movement"]
one_shot = true

[node name="MoveTimerLeft" type="Timer" parent="Movement"]
one_shot = true

[node name="MoveTimerRight" type="Timer" parent="Movement"]
one_shot = true

[node name="SpawnTimer" type="Timer" parent="Movement"]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="Movement/MoveTimerForward" to="Movement" method="_on_move_timer_forward_timeout"]
[connection signal="timeout" from="Movement/MoveTimerLeft" to="Movement" method="_on_move_timer_left_timeout"]
[connection signal="timeout" from="Movement/MoveTimerRight" to="Movement" method="_on_move_timer_right_timeout"]
[connection signal="timeout" from="Movement/SpawnTimer" to="." method="_on_spawn_timer_timeout"]
